--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,11 @@ dependencies {
     compile "com.android.support:recyclerview-v7:25.3.1"
     testCompile 'junit:junit:4.12'
     compile 'com.github.bumptech.glide:glide:3.6.0'
+    compile 'gun0912.ted:tedpermission:1.0.3'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.sackcentury:shinebutton:0.1.7'
+    compile 'com.github.GwonHyeok:StickySwitch:0.0.11'
+    compile 'com.github.varunest:sparkbutton:1.0.5'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
 }
+apply plugin: 'com.google.gms.google-services'
