--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,23 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+
     <!-- Camera를 사용한다고 사용자에게 알린다. -->
     <uses-feature android:name="android.hardware.camera2" />
-    <!-- 찍힌 사진을 외장 모메리에 저장하기 위해서 외장 USB에 쓰지 권한을 요청한다. -->
+    <!-- 찍힌 사진을 외장 메모리에 저장하기 위해서 외장 USB에 쓰기 권한을 요청한다. -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- Allows access to the flashlight -->
+    <permission android:name="android.permission.FLASHLIGHT"
+        android:permissionGroup="android.permission-group.HARDWARE_CONTROLS"
+        android:protectionLevel="normal"
+        android:label="@string/permlab_flashlight" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_flash_off"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -27,9 +36,29 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.kangbc.kbcapplication1.activity.DataBindingActivity"/>
         <activity android:name="com.kangbc.kbcapplication1.activity.CameraActivity"/>
 
+        <receiver
+            android:name=".activity.FlashlightWidgetProvider"
+            android:icon="@mipmap/ic_flash_off"
+            android:label="@string/app_name">
+
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/flashlight_appwidget_info" />
+        </receiver>
+
+        <receiver android:name=".activity.FlashlightWidgetReceiver">
+            <intent-filter>
+                <action android:name="COM_FLASHLIGHT"></action>
+            </intent-filter>
+        </receiver>
+
     </application>
+
+
 
 </manifest>
