--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kangbc.kbcapplication1">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
 
     <!-- Camera를 사용한다고 사용자에게 알린다. -->
@@ -13,10 +13,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- Allows access to the flashlight -->
-    <permission android:name="android.permission.FLASHLIGHT"
+    <permission
+        android:name="android.permission.FLASHLIGHT"
+        android:label="@string/permlab_flashlight"
         android:permissionGroup="android.permission-group.HARDWARE_CONTROLS"
-        android:protectionLevel="normal"
-        android:label="@string/permlab_flashlight" />
+        android:protectionLevel="normal" />
 
     <application
         android:allowBackup="true"
@@ -24,10 +25,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity" />
-
-        <activity android:name=".activity.SplashActivity"
+        <activity
+            android:name=".activity.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,30 +35,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.CameraActivity" />
 
-        <activity android:name="com.kangbc.kbcapplication1.activity.CameraActivity"/>
-
-        <receiver
-            android:name=".activity.FlashlightWidgetProvider"
-            android:icon="@mipmap/ic_flash_off"
-            android:label="@string/app_name">
-
+        <receiver android:name=".FlashlightWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.kangbc.kbcapplication1.FlashlightWidget.ON"/>
+                <action android:name="com.kangbc.kbcapplication1.FlashlightWidget.OFF"/>
             </intent-filter>
 
-            <meta-data android:name="android.appwidget.provider"
-                android:resource="@xml/flashlight_appwidget_info" />
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/flashlight_widget_info" />
         </receiver>
-
-        <receiver android:name=".activity.FlashlightWidgetReceiver">
-            <intent-filter>
-                <action android:name="COM_FLASHLIGHT"></action>
-            </intent-filter>
-        </receiver>
-
     </application>
-
-
 
 </manifest>
