--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_flash_off"
+        android:icon="@mipmap/ic_flash_on"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
 
         <meta-data
             android:name="com.google.android.gms.version"
