--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         multiDexEnabled true
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -35,11 +35,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services:10.0.1'
-    compile "com.android.support:recyclerview-v7:25.3.1"
     testCompile 'junit:junit:4.12'
     compile 'gun0912.ted:tedpermission:1.0.3'
-    compile 'com.sackcentury:shinebutton:0.1.7'
-    compile 'com.github.GwonHyeok:StickySwitch:0.0.11'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.android.support:multidex:1.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
