--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,6 @@
 
     <uses-feature android:name="android.hardware.camera" />
 
-    <!-- Camera를 사용한다고 사용자에게 알린다. -->
-    <uses-feature android:name="android.hardware.camera2" />
-    <!-- 찍힌 사진을 외장 메모리에 저장하기 위해서 외장 USB에 쓰기 권한을 요청한다. -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <!-- Allows access to the flashlight -->
     <permission
         android:name="android.permission.FLASHLIGHT"
@@ -21,16 +16,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_flash_on"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:name="android.support.multidex.MultiDexApplication">
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".MainActivity" />
         <activity
             android:name=".activity.SplashActivity"
             android:theme="@style/SplashTheme">
